# dual_ur_robotiq

./: README.md
drawing/: CMakeLists.txt  README.md  package.xml
drawing/data/input/: Starry_Night_path_c.txt  Starry_Night_path_k.txt  Starry_Night_path_m.txt  Starry_Night_path_y.txt  bigben_1_path_c.txt  bigben_1_path_k.txt  bigben_1_path_m.txt  bigben_1_path_y.txt  bigben_path_c.txt  bigben_path_k.txt  bigben_path_m.txt  bigben_path_y.txt  curves_on_sphere_1.txt  dog_path_c.txt  dog_path_k.txt  dog_path_m.txt  dog_path_y.txt  heart_path_c.txt  heart_path_k.txt  heart_path_m.txt  heart_path_y.txt  red_flower_path_c.txt  red_flower_path_k.txt  red_flower_path_m.txt  red_flower_path_y.txt  sunflower_path_c.txt  sunflower_path_k.txt  sunflower_path_m.txt  sunflower_path_y.txt
drawing/data/trajectory/: Starry_Night_path_l_c_0.yaml  Starry_Night_path_l_c_2.yaml  heart_path_bimanual_0.yaml  heart_path_bimanual_1.yaml  heart_path_bimanual_10.yaml  heart_path_bimanual_100.yaml  (+645 more)
drawing/include/: drawing_input.h  drawing_input_sphere.h  drawing_input_tsp.h  drawing_manager.h  drawing_manager_sphere.h  marker_publisher.h
drawing/launch/: drawing.launch
drawing/script/: draw_left.py  draw_right.py  draw_sbr_left.py  draw_sbr_right.py  drawing_manager.py  gripper_left.py  gripper_right.py
drawing/src/: README.md  drawing.cpp  drawing.rviz  drawing_input.cpp  drawing_input_sphere.cpp  drawing_input_tsp.cpp  drawing_manager.cpp  drawing_manager_.cpp  drawing_manager_mult.cpp  drawing_manager_one_arm.cpp  drawing_manager_save.cpp  drawing_sphere.cpp  drawing_sphere_1.cpp  drawing_sphere_load.py  drawing_sphere_test.cpp  drawing_test.cpp  drawing_test_save.cpp  init_pose.cpp  load_trajectory.py  load_trajectory_bi.py  load_trajectory_mult.py  marker_publisher.cpp  marker_publisher_2.cpp  save_trajectory.py  test.py  test_moveit.py
(+2851 files in other folders)
